--- a/app/globals.css
+++ b/app/globals.css
@@ -147,6 +147,9 @@
 
 body{
     overflow: hidden;
+    background: radial-gradient(ellipse at center, #cfeafe 0%, #f0faff 100%);
+    /* background: radial-gradient(ellipse at center, #7dd3fc 0%, #e0f2fe 150%); */
+    /* bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-sky-300 to-sky-100 */
     /* background-color: #cccccc; */
 }
 
@@ -175,6 +178,10 @@ body{
       hsl(203deg 87% 91%) 100%
     );
   }
+
+.gradient2{
+    background: radial-gradient(ellipse at center, #cfeafe 0%, #f0faff 100%);
+}
 
   /* .gradient2{
     background: linear-gradient(45deg, hsla(0, 0%, 0%, 1) 0%, hsla(199, 100%, 68%, 1) 100%);
