--- a/app/globals.css
+++ b/app/globals.css
@@ -147,7 +147,7 @@
 
 body{
     overflow: hidden;
-    background: radial-gradient(ellipse at center, #cfeafe 0%, #f0faff 100%);
+    background: radial-gradient(ellipse at center, #cfeafe 0%, #cfeafe 100%);
     /* background: radial-gradient(ellipse at center, #7dd3fc 0%, #e0f2fe 150%); */
     /* bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-sky-300 to-sky-100 */
     /* background-color: #cccccc; */
